--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# manually added
+target/
+.log
+.idea/
+*.iml
+log
+.DS_Store
+.*
