--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,20 @@
             <groupId>com.shash.automationNG</groupId>
             <version>0.0.1</version>
         </dependency>
-
-
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
