--- a/config/mark-config.yaml
+++ b/config/mark-config.yaml
@@ -1,6 +1,6 @@
 localhost:
   webConfig:
-    baseUrl: http://www.landmarkshops.com/
+    baseUrl: "http://www.landmarkshops.com/"
 
   testConfig:
     driverType: Firefox
