--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <version>0.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-htmlunit-driver</artifactId>
+            <version>2.42.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
