fixed test cases failing in headless mode

--- a/config/mark-config.yaml
+++ b/config/mark-config.yaml
@@ -3,5 +3,5 @@ localhost:
     baseUrl: "http://www.landmarkshops.com"
 
   testConfig:
-    driverType: Firefox
+    driverType: headless
     globalSleepTimeInMS: 5000
